[package]
name = "accessible-ui"
description = "Accessible UI for Yew"
version = "0.1.0"
authors = ["Spencer C. Imbleau <spencer@imbleau.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/simbleau/accessible-ui"
keywords = [
    "ui",
    "web",
    "yew"
]
categories = ["wasm", "web-programming"]
readme = "README.md"

[workspace]
members = [
    "nursery"
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
wasm-bindgen = "0.2"
yew = "0.20"
yew-router = "0.17"
stylist = { version = "0.12", features = ["yew_integration"] }
serde = "1.0.152"
# TODO: Remove when stable
cssugar = { git = "https://github.com/simbleau/cssugar", rev = "e0c185a961eb3d1873efbb20c3375fda2e7d9a40" }
fastrand = { version = "1.7" }

gloo-utils = "0.1"
[dependencies.web-sys]
version = "0.3"
features = [
    "CssStyleDeclaration",
    "Element",
    "Window"
]