[package]
name = "nursery"
version = "0.1.0"
edition = "2021"

[dependencies]
accessible-ui = {path = ".."}
stylist = { version = "0.12.0", features = ["yew_integration"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
gloo-dialogs = "0.1.1"
# TODO: Remove when stable
cssugar = { git = "https://github.com/simbleau/cssugar", rev = "e0c185a961eb3d1873efbb20c3375fda2e7d9a40" }